uploaded the final stacker data

--- a/pssp_source/Makefile
+++ b/pssp_source/Makefile
@@ -5,15 +5,12 @@ LD=g++
 LDFLAGS=-O3
 PY=python
 #LDFLAGS=-g
-DIR1=/cancerTypes/split1/
-DIR2=/cancerTypes/split2/
-DIR3=/cancerTypes/split3/
-IN_FILES := $(wildcard cancerTypes/split2/*.txt)
-OUT_TEST := $(wildcard cancerTypes/split1/*.model)
-OUT_FILES := $(patsubst cancerTypes/split1/%.txt, cancerTypes/split1/%.model, $(wildcard cancerTypes/split1/*.txt))
+IN_FILES := $(wildcard cancerTypes/split1/*.txt)
+IN_TEST := $(wildcard cancerTypes/split2/*.txt)
 
 .PHONY: train
-
+.PHONY: test
+	
 all: mtlr_train mtlr_test
 
 clean:
@@ -33,9 +30,12 @@ wrappert:
 testNtrain:
 	./mtlr_train -m 60 -i trainWrapperData.csv -o example.model
 	./mtlr_test -p -m 60 -i testWrapperData.csv -o example.model
-	# ./mtlr_test -p -m 60 -i patientZero.csv -o example.model
+	
 train: $(IN_FILES)
-	./mtlr_train -m 60 -i $(IN_FILES) -o $(basename $(IN_FILES)).model
+	./mtlr_train -i $(IN_FILES) -o $(basename $(IN_FILES)).model
+
+test: $(IN_TEST)
+	./mtlr_test -i $(IN_TEST) -o $(basename $(IN_TEST)).model	
 Test.o:
 	$(CC) -c $(CFLAGS) Test.cpp -o Test.o
 Sparm.o:
